fix: home page responsive section

--- a/home.html
+++ b/home.html
@@ -57,7 +57,9 @@
         <div class="middle_section">
             <div class="row_container flex row">
                 <div class="menu_btn">
-                    <button class="all_cat category_btn"> <img src="./assets/images/menu-white.png" alt="menu icon" srcset=""> Alle categorieen </button>
+                    <button class="all_cat category_btn">
+                        <img src="./assets/images/menu-white.png" alt="menu icon" srcset="">
+                    </button>
                 </div>
                 <img src="./assets/images/black-logo.jpg" alt="site logo" class="site_logo" width="250px">
                 <form action="" class="search_form">
@@ -72,7 +74,7 @@
                         <div class="icon_container">
                             <img src="./assets/images/headset.png" alt="customer services">
                         </div>
-                        <div class="flew row">
+                        <div class="flex flex-col row">
                             <p><strong>Klantenservice</strong></p>
                             <p><a href="tel:0800-1234">0800-1234</a></p>
                         </div>
@@ -82,7 +84,7 @@
                             <img src="./assets/images/lock.png" alt="customer services">
                             <strong><span class="rounded_green font_white">2</span></strong>
                         </div>
-                        <div class="flew row">
+                        <div class="flex flex-col row">
                             <p><strong>Winkelwagen</strong></p>
                             <p>€12,64</p>
                         </div>
@@ -91,7 +93,7 @@
                         <div class="icon_container">
                             <img src="./assets/images/person.png" alt="customer services">
                         </div>
-                        <div class="flew row">
+                        <div class="flex flex-col row">
                             <p><strong>Mijn Account</strong></p>
                             <p>Inloggen</p>
                         </div>
@@ -297,7 +299,7 @@
         <section class="rates_container">
             <div class="row_container">
                 <div class="heading_container">
-                    <div class="space_between flex">
+                    <div class="space_between rates_heading flex">
                         <div class="google_star font_medium flex">
                             <p>UITSTEKEND</p>
                             <div class="image_star_container flex">
