update detail product

--- a/detail.html
+++ b/detail.html
@@ -364,10 +364,20 @@
                                             <p>79,-</p>
                                         </div>
                                         <div class="list">
-                                            <p></p>
+                                            <p>Verzending</p>
                                             <p></p>
                                             <p>GRATIS</p>
                                         </div>
+                                        <hr>
+                                        <div class="list total">
+                                            <p>Totaal</p>
+                                            <p></p>
+                                            <p>1.775,-</p>
+                                        </div>
+                                        <a type="submit" class="add_cart_btn">
+                                            <img src="./assets/images/cart.svg" alt="cart icon">
+                                            <span>In mijn winkelwagen</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -377,6 +387,97 @@
                     <div class="right"></div>
                 </div>
             </div>
+
+            <section class="deals_container bg_gray">
+                <div class="row_container">
+                    <div class="heading_main_container">
+                        <div class="heading_container flex">
+                            <h2>GOEIE DEALS</h2>
+                            <a href="#">Meer deals >></a>
+                        </div>
+                        <div class="description_heading">
+                            <p>Deze items zijn het vaakst verkocht in de afgelopen 7 dagen</p>
+                        </div>
+                    </div>
+                    <div class="deals_content flex">
+                        <div class="left_side flex">
+                            <div class="item_deal">
+                                <div class="image_item"
+                                    style="background-image: url('./assets/images/yard.jpg'); background-size: contain; height: 150px; background-repeat: no-repeat; background-position: bottom center;">
+                                </div>
+                                <h3>SAUNA OBELIX 5 Persoons</h3>
+                                <p>Vanaf €2500</p>
+                                <a href="#">Meer informatie >></a>
+                            </div>
+                            <div class="item_deal">
+                                <div class="image_item"
+                                    style="background-image: url('./assets/images/yard.jpg'); background-size: contain; height: 150px; background-repeat: no-repeat; background-position: bottom center;">
+                                </div>
+                                <h3>SAUNA OBELIX 5 Persoons</h3>
+                                <p>Vanaf €2500</p>
+                                <a href="#">Meer informatie >></a>
+                            </div>
+                            <div class="item_deal">
+                                <div class="image_item"
+                                    style="background-image: url('./assets/images/yard.jpg'); background-size: contain; height: 150px; background-repeat: no-repeat; background-position: bottom center;">
+                                </div>
+                                <h3>SAUNA OBELIX 5 Persoons</h3>
+                                <p>Vanaf €2500</p>
+                                <a href="#">Meer informatie >></a>
+                            </div>
+                        </div>
+                        <div class="right_side flex">
+                            <div class="main_sale">
+                                <div class="sale_image">
+                                    <img src="./assets/images/yard.jpg" alt="the alt">
+                                </div>
+                                <h3>SALE</h3>
+                                <p>Tot wel 30% korting!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="categories_card_container">
+                <div class="row_container">
+                    <div class="heading_container flex">
+                        <h2>UITGELICHTE CATEGORIËN</h2>
+                        <a href="#">Alle categorieën >></a>
+                    </div>
+                    <div class="categories_container">
+                        <div class="category_card flex"
+                            style="background-image: url(./assets/images/jac.jpg); background-position: center; background-size: cover;">
+                            <h3>JACUZZI’S</h3>
+                            <p>Heerlijk bubbelen in je eigen achtertuin</p>
+                            <a href="#" class="green_btn with_arrow">JACUZZI’S</a>
+                        </div>
+                        <div class="category_card flex"
+                            style="background-image: url(./assets/images/jac.jpg); background-position: center; background-size: cover;">
+                            <h3>JACUZZI’S</h3>
+                            <p>Heerlijk bubbelen in je eigen achtertuin</p>
+                            <a href="#" class="green_btn with_arrow">JACUZZI’S</a>
+                        </div>
+                        <div class="category_card flex"
+                            style="background-image: url(./assets/images/jac.jpg); background-position: center; background-size: cover;">
+                            <h3>JACUZZI’S</h3>
+                            <p>Heerlijk bubbelen in je eigen achtertuin</p>
+                            <a href="#" class="green_btn with_arrow">JACUZZI’S</a>
+                        </div>
+                        <div class="category_card flex"
+                            style="background-image: url(./assets/images/jac.jpg); background-position: center; background-size: cover;">
+                            <h3>JACUZZI’S</h3>
+                            <p>Heerlijk bubbelen in je eigen achtertuin</p>
+                            <a href="#" class="green_btn with_arrow">JACUZZI’S</a>
+                        </div>
+                        <div class="category_card flex"
+                            style="background-image: url(./assets/images/jac.jpg); background-position: center; background-size: cover;">
+                            <h3>JACUZZI’S</h3>
+                            <p>Heerlijk bubbelen in je eigen achtertuin</p>
+                            <a href="#" class="green_btn with_arrow">JACUZZI’S</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
