--- a/detail.html
+++ b/detail.html
@@ -17,6 +17,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <link rel="stylesheet" href="./assets/css/custom.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <style>
+        .deals_container,
+        .categories_card_container__detail,
+        footer,
+        header {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -492,28 +500,31 @@
 
                             <div class="right">
                                 <div class="upper_content">
-                                    <div class="price_container">
-                                        <p class="real_price font_grey ">1399</p>
-                                        <p class="discounted_price">799,-</p>
-                                    </div>
-                                    <div class="approved_container">
-                                        <p class="approved xss box_bg">Op voorraad</p>
-                                        <p class="approved xss">Binnen 10 werkdagen geleverd</p>
-                                    </div>
-                                    <div class="product_review">
-                                        <div class="image_star_container flex">
-                                            <img src="./assets/images/star.png" alt="star icon">
-                                            <img src="./assets/images/star.png" alt="star icon">
-                                            <img src="./assets/images/star.png" alt="star icon">
-                                            <img src="./assets/images/star.png" alt="star icon">
-                                            <img src="./assets/images/half-star.svg" alt="star icon">
+                                    <div class="srt_upper">
+                                        <div class="price_container">
+                                            <p class="real_price font_grey ">1399</p>
+                                            <p class="discounted_price">799,-</p>
                                         </div>
-                                        <span class="font_grey">(384)</span>
-                                        <!-- if like is yes, the filled heart img will shown  -->
-                                        <a href="#" aria-label="love this product" class="like no">
-                                            <img src="./assets/images/love.svg" alt="love icon" class="doesnt_like">
-                                            <img src="./assets/images/filled-heart.svg" alt="loved icon" class="liked">
-                                        </a>
+                                        <div class="approved_container">
+                                            <p class="approved xss box_bg">Op voorraad</p>
+                                            <p class="approved xss">Binnen 10 werkdagen geleverd</p>
+                                        </div>
+                                        <div class="product_review">
+                                            <div class="image_star_container flex">
+                                                <img src="./assets/images/star.png" alt="star icon">
+                                                <img src="./assets/images/star.png" alt="star icon">
+                                                <img src="./assets/images/star.png" alt="star icon">
+                                                <img src="./assets/images/star.png" alt="star icon">
+                                                <img src="./assets/images/half-star.svg" alt="star icon">
+                                            </div>
+                                            <span class="font_grey">(384)</span>
+                                            <!-- if like is yes, the filled heart img will shown  -->
+                                            <a href="#" aria-label="love this product" class="like no">
+                                                <img src="./assets/images/love.svg" alt="love icon" class="doesnt_like">
+                                                <img src="./assets/images/filled-heart.svg" alt="loved icon"
+                                                    class="liked">
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="button_container">
                                         <form class="add_to_cart_container">
