--- a/filter_page.html
+++ b/filter_page.html
@@ -225,6 +225,9 @@
         <div class="category_page row_container">
             <div class="filter_section">
                 <div class="categories_result">
+										<button class="filter_close">
+											<img src="/assets/images/close.svg" alt="" />
+										</button>
                     <div class="main_category">
                         <a href="#" class="row_back">Tuiyn.nl</a>
                     </div>
@@ -630,7 +633,12 @@
                     </div>
                 </div>
             </div>
+						<button class="filter_toggle">
+							<img src="/assets/images/filter.svg" alt="" />
+							Filters
+						</button>
         </div>
+				<div class="filter_overlay"></div>
     </main>
 
     <footer>
