--- a/home.html
+++ b/home.html
@@ -654,8 +654,7 @@
             </div>
             <div class="inpirate_detail">
               <h4>DE 10 BESTE ZWEEFPARASOLS VAN HET MOMENT!</h4>
-              <p>Lorem ipsum dolor sit amet. Eum obcaecati consequuntur rem quidem incidunt ut temporibus recusandae non
-              </p>
+              <p>Lorem ipsum dolor sit amet.</p>
               <a href="#" class="green_btn with_arrow">VERDER LEZEN</a>
             </div>
           </div>
